# autodev

./: .env.example  .gitignore  CHANGELOG.md  PYPI_README.md  README.md  check_domains.py  docker-compose.yml  documentation.md  install.sh  monitor.db  monitor.db-journal  pyproject.toml  requirements.txt  run.ps1  run.sh  run_heyken.sh  setup.py  stop.sh  test_voice_skill.py
docs/: 1.md  3.md  5.md  6.md  monitoring-system.md  pypi-package.md
evodev/: __init__.py  main.py  ollama_client.py  ollama_client_class.py  recovery.py  recovery_system.py  web_projects.py
examples/: example_usage.py
heyken/: .env.example  .gitignore  10.md  11.md  12.md  13.md  14.md  2.md  7.md  8.md  FeatureRunner.py  README.md  app.py  continue_deployment.sh  continue_heyken_deployment.sh  main.tf  run.sh  run_bot.py  run_heyken.sh  run_main_bot.py  setup_heyken.sh  setup_prerequisites.sh  simple_rocketchat_ollama_bot.py  stop.sh  test_ollama.py
heyken/ansible/: inventory.ini
heyken/backup_20250507_151814/: main.tf
heyken/config/: domains.conf
heyken/docs/: dokumentacja_systemu.md  instrukcja_obslugi.md  porownanie_techniczne.md  porownanie_z_ai.md  porownanie_z_innymi_rozwiazaniami.md
heyken/heyken_bot/: README.md  pyproject.toml
heyken/heyken_bot/src/: __init__.py  bot_manager.py  main.py
heyken/heyken_bot/src/project_manager/: __init__.py  manager.py  project.py  workflow.py
heyken/heyken_bot/src/rocketchat/: __init__.py  bot.py  client.py
heyken/rocket-chat-auto/: docker-compose.yml  launch-rocketchat.sh  setup-rocketchat-users.sh  start-rocketchat.sh
heyken/scripts/: automate_rocketchat_setup.js  build_images.sh  check_system.sh  check_system.sh.backup_20250507_151814  create_feature.sh  deploy.sh  deploy.sh.backup_20250507_151814  docker_logs_to_rocketchat.py  fix_dependencies.sh  heyken_bot.js  improve_startup.sh  init.sh  init_gitlab.sh  logs.sh  manual_rocketchat_setup.md  package-lock.json  package.json  rocketchat_quick_setup.sh  setup_email_server.sh  setup_ollama.sh  setup_rocketchat.sh  setup_rocketchat_api.js  setup_rocketchat_complete_fixed.sh  setup_rocketchat_curl.sh  setup_rocketchat_final.sh  setup_rocketchat_final_fixed.sh  setup_rocketchat_fixed.sh  setup_rocketchat_reliable.sh  setup_rocketchat_selenium.py  setup_rocketchat_simple.sh  setup_rocketchat_with_logs.sh  show_status.sh  simple_bot.js  ssl_setup.sh  start_bot.sh  start_python_bot.sh  start_simple_bot.sh  status.sh  switch_core.sh
heyken/terraform/: terraform.tfstate  terraform.tfstate.backup
middleware-api/: app.py  autonomous_layer.py  docker_manager.py  logger.py  ollama_client.py  rocketchat_client.py
monitor/: app.py  docker_monitor.py  email_utils.py  monitor.db  requirements.txt
monitor/static/: style.css
monitor/templates/: base.html  chat.html  docker.html  docker_requests.html  docker_web.html  index.html  logs.html  todos.html  web_projects.html
recovery-system/: recovery.py
registry/: component_registry.json
scripts/: ollama_autoselect.sh  ollama_selected_model.txt  setup.sh
tests/unit/: __init__.py  test_ollama_client.py  (+1 more)
update/: env_manager.py  test_code.py
v2/: .gitlab-ci.yml  10.md  15.md  16.md  3.md  4.md  6.md  end.md
(+44 files in other folders)
